test/bad/def_two_symbols.pa
def foo, bar for a b {
    foo(a,b) <-> a = b;
    bar(a,b) <-> ~(a = b)
}

